--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>My Linktree</title>
 </head>
 <body>
@@ -19,11 +19,12 @@
             </p>
         </div>
         <div class="links">
-            <a href="https://www.smartafri.com">smartafri.com</a>
+            <a href="https://www.smartafri.com">My work (smartafri.com)</a>
             <a href="https://www.dabzee-events.com">Dabzee Events</a>
             <a href="https://www.github.com/stephenomas">Git Hub</a>
-            <a href="#">Blog</a>
-            <a href="#">Contact</a>
+            <a href="https://github.com/stephenomas/bio-task">This Repo</a>
+            <a href="team.html">My Team</a>
+            <a href="404.html">404 page</a>
         </div>
     </div>
 </body>
