--- a/team.html
+++ b/team.html
@@ -20,38 +20,48 @@
                 <th>Phone Number</th>
                 <th>GitHub Bio</th>
                 <th>Team Photo</th>
-                <th>Your Description</th>
+                <th>Description</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td>Wale Adenuga</td>
-                <td>Frontend Developer</td>
-                <td>wale@gmail.com</td>
-                <td>123-456-7890</td>
-                <td><a href="#" class="github-bio">GitHub Bio</a></td>
-                <td><img src="wale-photo.jpg" alt="John Doe" class="team-photo"></td>
+                <td>Obinna David Okeke</td>
+                <td>Full Stack JS Dev </td>
+                <td> okekedavid1333@gmail.com</td>
+                <td>+234 8061938780</td>
+                <td><a href="https://o-david.github.io/BioPage/" class="github-bio">Bio</a></td>
+                <td><img src="wale-photo.jpg" alt="Obinna" class="team-photo"></td>
+                <td>Hard working full stack developer.</td>
+            </tr>
+
+            <tr>
+                <td>Jameel Hassan Nalaraba</td>
+                <td>Full Stack Dev</td>
+                <td>Jameelnalaraba@gmail.com</td>
+                <td>+234 8035906076</td>
+                <td><a href="https://github.com/jameelnalaraba" class="github-bio">Bio</a></td>
+                <td><img src="sam-photo.jpg" alt="Jameel" class="team-photo"></td>
                 <td>Passionate about creating user-friendly interfaces and optimizing user experiences.</td>
             </tr>
 
             <tr>
-                <td>Sammy Banks</td>
-                <td>UI/UX designer</td>
-                <td>sam@gmail.com</td>
-                <td>123-456-7890</td>
-                <td><a href="#" class="github-bio">GitHub Bio</a></td>
-                <td><img src="sam-photo.jpg" alt="John Doe" class="team-photo"></td>
-                <td>Passionate about creating user-friendly interfaces and optimizing user experiences.</td>
+                <td>Uma Godwin Eke</td>
+                <td>Full stack Dev/ Flutter and Dart programmer </td>
+                <td>godwinekeuma@gmail.com</td>
+                <td>08168769849</td>
+                <td><a href="https://gozzicode.github.io/umagodwineke.github.io/" class="github-bio">Bio</a></td>
+                <td><img src="jak-photo.jpg" alt="Uma" class="team-photo"></td>
+                <td>Ambitious Programmer, that loves to achieve goals</td>
             </tr>
 
             <tr>
-                <td>Jak grims</td>
-                <td>Frontend Developer</td>
-                <td>grim.doe@gmail.com</td>
-                <td>123-456-7890</td>
-                <td><a href="#" class="github-bio">GitHub Bio</a></td>
-                <td><img src="jak-photo.jpg" alt="John Doe" class="team-photo"></td>
-                <td>Passionate about creating user-friendly interfaces and optimizing user experiences.</td>
+                <td>Aliyu Aliyu</td>
+                <td>Full Stack Dev </td>
+                <td>aliyu@alumni.emu.edu.tr</td>
+                <td>234 9092357326</td>
+                <td><a href="https://github.com/AliyuAliyu1" class="github-bio">Bio</a></td>
+                <td><img src="jak-photo.jpg" alt="Aliyu" class="team-photo"></td>
+                <td>Enjoy Playing around with codes and exploring creativity</td>
             </tr>
 
         </tbody>
