--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
       <div class="gridder my-3">
         <a href="easdfa">
           <div class="grid-item apps wow zoomIn">
-            <div class="img-place" data-src="assets/img/work/penorm.png" data-fancybox data-caption="<h5 class='fg-theme'>Penorm</h5> <p>Agriculture</p>">
+            <div class="img-place" data-src="assets/img/work/penorm.png" data-fancybox data-caption="<h5 class='fg-theme'>penorm.com</h5> <p>Agriculture</p>">
               <img src="assets/img/work/penorm.png" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">penorm.com</h5>
@@ -349,7 +349,7 @@
         </a>
        
         <div class="grid-item template wireframes wow zoomIn">
-          <div class="img-place" data-src="assets/img/work/smartafri.png" data-fancybox data-caption="<h5 class='fg-theme'>Smartafri</h5> <p>Multivendor Ecommerce</p>">
+          <div class="img-place" data-src="assets/img/work/smartafri.png" data-fancybox data-caption="<h5 class='fg-theme'>Smartafi.com</h5> <p>Multivendor Ecommerce</p>">
             <img src="assets/img/work/smartafri.png" alt="">
             <div class="img-caption">
               <h5 class="fg-theme">Smartafi.com</h5>
@@ -358,7 +358,7 @@
           </div>
         </div>
         <div class="grid-item apps ios wow zoomIn">
-          <div class="img-place" data-src="assets/img/work/lkids.png" data-fancybox data-caption="<h5 class='fg-theme'> Lovekids</h5> <p>Ecommerce</p>">
+          <div class="img-place" data-src="assets/img/work/lkids.png" data-fancybox data-caption="<h5 class='fg-theme'> lovekids.com.ng</h5> <p>Ecommerce</p>">
             <img src="assets/img/work/lkids.png" alt="">
             <div class="img-caption">
               <h5 class="fg-theme">lovekids.com.ng</h5>
@@ -367,7 +367,7 @@
           </div>
         </div>
         <div class="grid-item graphic ui-ux wow zoomIn">
-          <div class="img-place" data-src="assets/img/work/onemedy.png" data-fancybox data-caption="<h5 class='fg-theme'>Onemedy</h5> <p>Health</p>">
+          <div class="img-place" data-src="assets/img/work/onemedy.png" data-fancybox data-caption="<h5 class='fg-theme'>onemedy.com</h5> <p>Health</p>">
             <img src="assets/img/work/onemedy.png" alt="">
             <div class="img-caption">
               <h5 class="fg-theme">onemedy.com</h5>
@@ -385,7 +385,7 @@
           </div>
         </div>
         <div class="grid-item graphic ui-ux wireframes wow zoomIn">
-          <div class="img-place" data-src="assets/img/work/juneteen.png" data-fancybox data-caption="<h5 class='fg-theme'>Juneteen</h5> <p>Ecommerce</p>">
+          <div class="img-place" data-src="assets/img/work/juneteen.png" data-fancybox data-caption="<h5 class='fg-theme'>junekidsnteens.com</h5> <p>Ecommerce</p>">
             <img src="assets/img/work/juneteen.png" alt="">
             <div class="img-caption">
               <h5 class="fg-theme">junekidsnteens.com</h5>
