--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="col-lg-6 offset-lg-1 wow fadeInRight">
           <h1 class="fw-light">Stephen Omagbemi</h1>
           <h5 class="fg-theme mb-3">Full Stack Software Engineer</h5>
-          <p class="text-muted">I am a seasoned Software Developer with 4 years of professional experience, skilled in managing dynamic and well-structured projects across the entire development lifecycle. My proficiency extends to various programming languages and frameworks, allowing me to effectively contribute to projects. 
+          <p class="text-muted">I am a seasoned Software Developer with 5+ years of professional experience, skilled in managing dynamic and well-structured projects across the entire development lifecycle. My proficiency extends to various programming languages and frameworks, allowing me to effectively contribute to projects. 
             With a deep understanding of software engineering processes,
              I excel both as a valuable team member and as a self-directed developer.</p>
           <ul class="theme-list">
